# ComfyUI-TBG-SAM3

./: LICENSE.txt  README.md  __init__.py  install.py  masktosegs.py  model_manager.py  nodes.py  pyproject.toml  requirements.txt  sam3_utils.py
web/: sam3_points_boxes_widget.js
