[project]
name = "ComfyUI-TBG-SAM3"
description = "A ComfyUI custom-node extension that integrates Meta's Segment Anything Model 3 (SAM-3) for advanced image segmentation. It supports unified point and box selection, text-prompt segmentation, point-guided masks, and mask-driven refinement. Features include an Instant Instance Selection toggle, compatibility with tile-based upscalers such as TBG-ETUR, and full support for Impact Pack SEGS formats.\nThe extension provides both combined and separated mask outputs, offers production-ready ComfyUI nodes, includes optional depth-map generation, and is fully compatible with Python 3.13+ on both CUDA and CPU environments."
version = "1.0.7"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["huggingface_hub>=0.34.0,<1.0","opencv-python>=4.8.0","timm>=1.0.17","decord>=0.6.0","av>=9.0.0","hydra-core>=1.3.0","omegaconf>=2.3.0","einops>=0.6.0","pycocotools>=2.0.6","shapely>=1.8.0","ftfy>=6.1.1","regex","iopath>=0.1.10","typing_extensions","numpy>=1.26,<1.28","tqdm>=4.65.0","transformers>=4.40.0,<5.0.0","# SAM3 installed via install.py from GitHub","# git+https://github.com/facebookresearch/sam3.git"]

[project.urls]
Repository = "https://github.com/Ltamann/ComfyUI-TBG-SAM3"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Ltamann/ComfyUI-TBG-SAM3/wiki"
"Bug Tracker" = "https://github.com/Ltamann/ComfyUI-TBG-SAM3/issues"

[tool.comfy]
PublisherId = "tbg"
DisplayName = "ComfyUI-TBG-SAM3"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

